@startuml
title Resource Monitor Class Diagram
package eros {
    together {
        class ResourceMonitor
   
        struct ResourceMonitor::ResourceInfo
        enum ResourceMonitor::Mode
    }
    together {
        struct Diagnostic::DiagnosticDefinition
        class Logger
        enum Architecture::Type
    }
}
ResourceMonitor +-- ResourceMonitor::ResourceInfo
ResourceMonitor +-- ResourceMonitor::Mode
Logger *-- ResourceMonitor
Architecture::Type *-- ResourceMonitor 
Diagnostic::DiagnosticDefinition *-- ResourceMonitor 
struct ResourceMonitor::ResourceInfo {
    string process_name
    uint16_t pid
    double cpu_perc
    double ram_perc
    double disk_perc
}
enum ResourceMonitor::Mode {
    PROCESS
    DEVICE
}
class ResourceMonitor {
    +ResourceMonitor(Mode _mode, Diagnostic::DiagnosticDefinition _diag, Logger* _logger)
    +bool is_initialized()
    +string pretty(ResourceInfo info)
    +Diagnostic::DiagnosticDefinition init()
    +ResourceInfo get_resourceinfo()
    +Architecture::Type get_architecture()
    +Diagnostic::DiagnosticDefinition update(double t_dt)
    +std::vector<double> get_load_factor()
    +bool reset()

}
@enduml